Fix for stackoverflow

--- a/src/style/fullcalendar-vars.css
+++ b/src/style/fullcalendar-vars.css
@@ -1,3 +1,3 @@
 :root {
-  --fc-page-bg-color: red;
+  --fc-button-bg-color: red;
 }
